# dxgl

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json
containsim/: CMakeLists.txt
containsim/doc/: ContainmentSimulatorArch.drawio
containsim/res/: rooms.json  spritesheets.json  tiles.json
containsim/res/img/: spritesheets.json  tiles.tga
containsim/res/ui/: ingame.html
containsim/res/ui/game/: ingame.html  main.css  main.js  main.rcss  test.rml  window.rcss
containsim/res/ui/game/bell/: bell.js
containsim/res/ui/game/cement/: cement.js
containsim/shaders/: debug.frag  debug.vert  framebuffer.frag  room.frag  room.geom  room.vert  sprite.frag  sprite.vert
containsim/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  DeltaTimer.cpp  DeltaTimer.hpp  main.cpp
containsim/src/common/: Action.hpp  CMakeLists.txt  DrawQueues.cpp  DrawQueues.hpp  FileUtils.cpp  GlobalData.hpp  GlobalState.hpp  Rendering.hpp  Tile.hpp
containsim/src/components/: Transform.hpp
containsim/src/core/: CMakeLists.txt  Camera.cpp
containsim/src/core/common/: Action.hpp  ActionChain.hpp  BuildInputEvents.hpp  CMakeLists.txt  Command.hpp  DebugDraws.cpp  DebugDraws.hpp  DeducingThisHelper.hpp  DrawQueues.cpp  DrawQueues.hpp  DrawQueuesKgr.hpp  DxglKgr.hpp  EventCommandable.hpp  FileUtils.hpp  GlobalConfig.hpp  GlobalConfigKgr.hpp  IdRegistry.hpp  InputStateEvents.hpp  Logging.cpp  Logging.hpp  MeceFsm.cpp  MeceFsm.hpp  Pathing.hpp  PimplHelper.hpp  Rect.cpp  Rect.hpp  Rendering.hpp  Room.cpp  Room.hpp  RoomInputEvents.hpp  Ticks.hpp  Tile.cpp  Tile.hpp  TileCoord.cpp  TileCoord.hpp  UiValue.hpp
containsim/src/core/common/ui/: UiEvents.hpp
containsim/src/core/components/: Actor.hpp  CircleMover.hpp  Collider.hpp  ComponentProducer.hpp  Mobility.hpp  Pathing.hpp  RenderData.hpp  Sprite.hpp  Transform.hpp
containsim/src/core/kangaru_ext/: kgr.hpp
containsim/src/core/modules/: CMakeLists.txt
containsim/src/core/modules/ai/: Ai.cpp  Ai.hpp  CMakeLists.txt  CommonConsiderations.cpp  CommonConsiderations.hpp  Consideration.hpp  MovePerformance.cpp  MovePerformance.hpp  Perform.cpp  Perform.hpp  Utility.cpp  Utility.hpp
containsim/src/core/modules/application/: Application.cpp  Application.hpp  ApplicationEvents.hpp  CMakeLists.txt  EventManager.hpp  UiEnv.cpp  UiEnv.hpp  WindowComponents.hpp
containsim/src/core/modules/core/: Actor.hpp  BuildManager.cpp  BuildManager.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Cooldown.hpp  Core.cpp  Core.hpp  EventManager.hpp  Interaction.cpp  Interaction.hpp  Mobility.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  RoomTypeMeta.cpp  RoomTypeMeta.hpp  Science.hpp  Tile.cpp  Tile.hpp  TileCoord.cpp  TileCoord.hpp  TileGrid.cpp  TileGrid.hpp  TileTypeMeta.cpp  TileTypeMeta.hpp  Time.hpp  Transform.hpp
containsim/src/core/modules/experiment/: CMakeLists.txt  Experiment.cpp  Experiment.hpp
containsim/src/core/modules/input/: ActionRouter.cpp  ActionRouter.hpp  BasicMouseTester.hpp  BuildInput.cpp  BuildInput.hpp  CMakeLists.txt  DragHelper.cpp  DragHelper.hpp  (+11 more)
containsim/src/core/services/: ActionRouter.cpp  ActionRouter.hpp  ActionRouterKgr.hpp  BasicMouseTester.hpp  BuildInput.cpp  BuildInput.hpp  BuildInputEvents.hpp  BuildManager.cpp  BuildManager.hpp  BuildMode.cpp  BuildMode.hpp  BuildServicesKgr.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraKgr.hpp  EventManager.hpp  GameState.cpp  GameState.hpp  InputHandler.cpp  InputHandler.hpp  InputHandlerKgr.hpp  InputState.cpp  InputState.hpp  InputStateEvents.hpp  InputStateKgr.hpp  JsContextStorage.cpp  JsContextStorage.hpp  Logging.cpp  Logging.hpp  RmlContextKgr.hpp  RoomInput.cpp  RoomInput.hpp  RoomInputEvents.hpp  RoomManager.cpp  RoomManager.hpp  RoomRenderer.cpp  RoomRenderer.hpp  TileGrid.cpp  TileGrid.hpp  (+16 more)
containsim/src/core/systems/: CMakeLists.txt  CircleMover.hpp  Collision.cpp  Collision.hpp  PathMover.cpp  PathMover.hpp  Pathfinder.cpp  Pathfinder.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  SpriteRendererKgr.hpp  TilePrefabs.cpp  TilePrefabs.hpp
containsim/src/modules/: CMakeLists.txt  TileGrid.cpp  TileGrid.hpp
containsim/src/services/: ActionRouter.cpp  ActionRouter.hpp  CMakeLists.txt  GameState.cpp  GameState.hpp  InputHandler.cpp  InputHandler.hpp  JsContextStorage.cpp  JsContextStorage.hpp  TileGrid.cpp  UiCallback.cpp  UiCallback.hpp  UiRenderer.cpp  UiRenderer.hpp  UiView.cpp  UiView.hpp
containsim/src/services/commands/: BuildCommands.hpp  ServiceCommands.hpp
containsim/src/services/interfaces/: IMouseTester.hpp
containsim/src/systems/: CMakeLists.txt  SpriteRenderer.cpp  SpriteRenderer.hpp
containsim/test/: BuildInput.cpp  BuildMode.cpp  CMakeLists.txt  test_main.cpp
demo/: CMakeLists.txt  Camera.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  Skybox.cpp  Skybox.hpp  main.cpp
demo/shaders/: cubemap_reflect.frag  frag_shift.frag  frag_yellow.frag  framebuffer.frag  framebuffer.vert  gs_lines.geom  light.frag  perspective.vert  phong_mesh.frag  phong_tex.frag  phong_tex_directional.frag  phong_tex_multi.frag  phong_tex_spotlight.frag  skybox.frag  tex_perspective.vert
dxgl/: CMakeLists.txt
dxgl/dxtl/: CMakeLists.txt
dxgl/dxtl/inc/dxtl/: cstring_view.hpp  overloaded.hpp
dxgl/inc/dxgl/: Application.hpp  Common.hpp  Cubemap.hpp  Draw.hpp  Ebo.hpp  Framebuffer.hpp  Graphics.hpp  Handle.hpp  Light.hpp  LightColor.hpp  Material.hpp  Mesh.hpp  Renderbuffer.hpp  Screenbuffer.hpp  Shader.hpp  Texture.hpp  TextureStore.hpp  Ubo.hpp  Uniform.hpp  Vao.hpp  Vbo.hpp
dxgl/src/: Application.cpp  Cube.cpp  Cubemap.cpp  Draw.cpp  Ebo.cpp  Framebuffer.cpp  Graphics.cpp  Light.cpp  Material.cpp  Renderbuffer.cpp  Screenbuffer.cpp  Shader.cpp  Texture.cpp  TextureStore.cpp  Ubo.cpp  Uniform.cpp  Vao.cpp  Vbo.cpp
minecraft/: CMakeLists.txt  main.cpp
minecraft/shaders/: basic.frag  basic.vert  chunk.frag  chunk.vert  debug.frag  debug.vert  sprite.frag  sprite.geom  sprite.vert
minecraft/src/: Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  GlobalState.hpp  Physics.cpp  Physics.hpp  Player.cpp  Player.hpp  main.cpp
(+137 files in other folders)
